--- a/movies.html
+++ b/movies.html
@@ -105,7 +105,7 @@
 	
 	<div id="moviedesc3" class="moviedesc" style="display: none;">
 		<a href="javascript:void(0)" class="closeboxbtn" onclick="closeBox3()">&times;</a>
-		<p>When this lone wolf detective is assigned a super hyper new partner they must figure out how to work togther to solve a mysterious crime.</p>
+		<p>When this lone wolf detective is assigned a super hyper new partner they must figure out how to work together to solve a mysterious crime.</p>
 		<p class="viewtimes">Viewing Times: <br>
 		Wednesday 10th Feb - 12pm, 5pm <br>
 		Thursday 11th Feb - 9am, 5pm, 8pm <br>
